crates/unblock-cli/tests/snapshots/init_agents__init_report_with_agents.snap
---
source: crates/unblock-cli/tests/init_agents.rs
expression: "redacted_init_report(&[\"--agents\"])"
---
{
  "findings": [
    {
      "detail": "<root>",
      "label": "workspace_dir"
    },
    {
      "detail": "<root>/.unblock",
      "label": "unblock_dir"
    },
    {
      "detail": "<root>/.unblock/unblock.db",
      "label": "db_path"
    },
    {
      "detail": "<root>/.unblock/config.toml",
      "label": "config_path"
    },
    {
      "detail": "ub",
      "label": "id_prefix"
    },
    {
      "detail": "<root>/AGENTS.md",
      "label": "agents_path"
    }
  ],
  "kind": "info"
}
